# cpp-cli-list-select

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  cmake_data.yaml  install-deb-development-packages.sh  main.cpp
cmake/: gcmake-installation-utils.cmake
